--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fishingbooker/react-alert",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
     "babel-loader": "^8.0.0-beta.2",
