--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,11 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-transform-modules-commonjs"
+    [
+      "@babel/plugin-transform-modules-commonjs",
+      {
+        "allowTopLevelThis": true
+      }
+    ]
   ]
 }
